Fixed card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 body {
   background-color: hsl(194 100% 90%);
 }
+.cardsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
